Running secrets and variables workflow

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -33,9 +33,9 @@ jobs:
             echo ${{ github.event_name }}
             echo ${{ github.event }}
             echo ${{ secrets.NAME }}
-          # echo ${{ vars.SPOUSE_NAME }}
-          # echo ${{ env.COMPANY_NAME }}
-          # echo ${{ env.COUNTRY_NAME }}
+            echo ${{ vars.SPOUSE_NAME }}
+            echo ${{ env.COMPANY_NAME }}
+            echo ${{ env.COUNTRY_NAME }}
 
       # Step 3: Logs in to GHCR to upload file
       - name: Log in to GHCR
