--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -12,7 +12,7 @@ permissions:
   packages: write
 
 env:
-  COMPANY_NAME: VOLVO-CARS
+  COMPANY_NAME: ONEYES
   COUNTRY_NAME: SWEDEN
 
 jobs:
@@ -33,9 +33,9 @@ jobs:
             echo ${{ github.event_name }}
             echo ${{ github.event }}
             echo ${{ secrets.NAME }}
-            echo ${{ vars.AGE }}
+            echo ${{ vars.GENDER }}
             echo ${{ env.COMPANY_NAME }}
-          # echo ${{ env.COUNTRY_NAME }}
+            echo ${{ env.COUNTRY_NAME }}
 
       # Step 3: Logs in to GHCR to upload file
       - name: Log in to GHCR
